--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
       name="description"
       content="SportSee un site dédié au coaching sportif"
     />
-    
+
     <title>SportSee</title>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <div id="root"></div>
